[package]
name = "sync_manager"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
address = { path = "../../vm/address" }
blocks = { path = "../blocks" }

[dev-dependencies]
cid = { package = "ferret_cid", path = "../../ipld/cid" }
num-bigint =  { git = "https://github.com/austinabell/num-bigint", rev = "f7084a9ed5a2b08d9bfb67790cb4ce9212193f31" }
