[package]
name = "tuple_serialize"
version = "0.1.0"
authors = ["austinabell <austinabell8@gmail.com>"]
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/runner.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
