[package]
name = "network"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
ferret-libp2p = { path = "../ferret-libp2p" }
futures = "0.1.29"
tokio = "0.1.22"
libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "3f9b030e29c9b31f9fe6f2ed27be4a813e2b3701" }
log = "0.4.8"
slog = "2.5.2"
