[package]
name = "blocksync"
version = "0.1.0"
authors = ["Eric Tu <tu.eric@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "3f9b030e29c9b31f9fe6f2ed27be4a813e2b3701" }
tokio = "0.1.22"

encoding = {path = "../../../encoding"}
serde = { version = "1.0", features = ["derive"] }
bytes = "0.4.12"
futures = "0.1.29"
ferret_cid = { path = "../../../ipld/cid" }
blocks = { path = "../../../blockchain/blocks" }
message = { path = "../../../vm/message" }
